--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^1.0.0
+  firebase_auth: ^1.4.1
+  cloud_firestore: ^2.2.2
+  equatable: ^2.0.2
+  provider: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
